# StapleCppbasedcf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  integral.hpp  log.h  matlabImglst.py  run_StapleCpp.m
benchmark/: CMakeLists.txt  README.md  ffttools.cpp  ffttools.hpp  run_StapleCpp.m  run_stapleCpp1.m  tracker-benchmark  tracker_benchmark.cpp
demo/: CMakeLists.txt  demo_img_list.cpp  demo_img_vot.cpp  demo_video.cpp  demo_vot.cpp  vot.h
ot/: CMakeLists.txt  stapletracker.cpp  stapletracker.hpp
ot/inc/: al_ot.h
ot/src/: al_ot.cpp  dollar_hog.cpp  dssttracker.cpp  dssttracker.hpp  ffttools.cpp  ffttools.hpp  fhog.hpp  kcftracker.cpp  kcftracker.hpp  kcftracker_exp.cpp  kcftracker_exp.hpp  labdata.cpp  labdata.hpp  recttools.hpp  sse.hpp  stapletracker.cpp  stapletracker.hpp  tracker.hpp  version.cpp.in
tracker/: CMakeLists.txt
tracker/inc/: al_tracker.h  kcftracker.hpp  tracker.hpp
tracker/src/: al_tracker.cpp  dollar_hog.cpp  dollar_hog.hpp  ffttools.hpp  kcftracker.cpp  labdata.hpp  stapletracker.cpp  stapletracker.hpp  tracker.cpp
